--- a/views/Search.pug
+++ b/views/Search.pug
@@ -5,9 +5,12 @@ block content
     .search_header
         h3 Searching for #{searchingBy}
     .search_videos
+        if videos.length === 0
+            h3 No Videos Found
         each video in videos
             +videoBlock({
                 title:video.title,
                 views:video.views,
-                videoFile:video.videoFile
+                videoFile:video.videoFile,
+                id:video.id
             })
