--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -8,3 +8,8 @@ block content
         h5.video_title=video.title
         span.video_views=video.vides
         p.video_description=video.description  
+    .video_comments
+        if video.comments.length === 1
+            span.video_comment-number 1 comment
+        else
+            span.video_comment-number ${video.comments.length} comments
