--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,6 +3,7 @@ html
     head
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.7.2/css/all.css", integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr", crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="static/styles.css")
     body
         include ../partials/header
         main
@@ -10,3 +11,4 @@ html
         footer
             span &copy; WeTube
         include ../partials/footer
+        script(src="/static/main.js")
