--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,8 +1,9 @@
-.social-Login
+.social-login
     button.social-login--github
-        span
-            i.fab.fa-github
-        | Continue whit Github
+        a(href=routes.gitHub)
+            span
+                i.fab.fa-github
+            | Continue whit Github
     button.social-login--facebook
         span
             i.fab.fa-facebook
